================= Unreleased ==================
; Fixed ; Minor ; Runtime ; #5665
Updated the loglevel conversion between runtime and Kinsol which in some
models has significant impact on the performance.

; Change ; Minor ; Compiler ; #5659
loadResource on directories now always leads to compile time evaluation of path.

; Fixed ; Minor ; Compiler ; #5642
Improved and added tests for SimpleLookup. Now supports Quoted names.
JavaDoc has also been added.

; Fixed ; Minor ; Compiler ; #5640 
Fixed a problem where functions had to restrictive visibility.
Added header information for functions which needed greater visibility.

; Fixed ; Minor ; Compiler ; #5632
Fixed issue with FExp.dynamicFExp(FExp exp) for null input.

; Fixed ; Minor ; PyFMI ; #5624
Made binary result saving more robust.

; Fixed ; Minor ; PyFMI ; #5623
Fixed issue with using the result filter together with FMI1

; Change ; Minor ; MSL ; #5619
Patched MSL resources to work with VS2015.

; Feature ; Minor ; Compiler ; #5605
Support for initial parameter external objects.

; Change ; Minor ; Compiler ; #5612 
Changed error check of arguments when compiling from command line to allow empty library argument if a
modelica path is supplied.

; Fixed ; Minor ; PyFMI ; #5615
Improved input handling for FMI2

; Fixed ; Minor ; PyFMI ; #5613
Fixed simulation logging when there are no states.

; Fixed ; Minor ; Compiler ; #5569
Fixed bug where generic annotation framework returned wrong value or threw
exception (depended on underlying implementation) if the node was ambiguous,
instead it now returns another ambiguous node.

; Fixed ; Minor ; Runtime ; #5608
Removed the -g flag when building FMUs

; Fixed ; Minor ; Compiler ; #5606
Improved ability to obtain annotation value and 
remove modifications.

; Fixed ; Minor ; Compiler ; #5594
Added functionality to remove annotations/modifications.

; Fixed ; Minor ; Compiler ; #5604
Fixed bug where using an iterator expression to set the binding 